2008-11-27  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 1.0 (time for normal version numbers)

	* A few small cosmetic changes. 

2008-11-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.149

	* Fixed @distribute to cleanup nests correctly.

2008-11-25  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.148

	* Fixed bug related to matching of "A?^{a}" when it would occur as
	a single item on the lhs of a replacement rule.

	* Made nested partial derivatives simplify automatically.

2008-10-26  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Added window icons.

2008-09-22  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.147

	* Fixed a show-stopping brown-paper-bag bug in the GUI.

2008-09-21  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.146

	* Various small fixes to prepare for release.

2008-08-29  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.144

	* Added undo/redo to the GUI.

2008-08-23  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.142

	* Another pattern matching bugfix for cases of the type

	   A^{\mu} B^{\nu};
           @substitute!(%)( A?^{\sigma} A?^{\rho} -> Q^{\sigma\rho} );


	* Fixed a bug in tree.hh which would sometimes lead to a failure
	when acting with an algorithm at fixed depth.

	* Streamlined the pattern matching engine, removing along the way
	a bug which would misbehave with

	    X Y + Z Z
	    @substitute!(%)( A? A? -> Q );

	* Made property initialisation produce proper error messages
	instead of just textual output.

2008-08-21  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Released 0.141

	* Fixed a bug in the main loop related to handling of multipliers.

	* Fixed a bug in @substitute which would touch the tree above the
	entry point, thereby disabling clean-up routines. 

2008-08-07  Kasper Peeters  <kasper.peeters@aei.mpg.de>

	* Fixed a bug in the GUI which would corrupt the notebook upon
	removing the last cell.
