@@ -14,8 +14,8 @@ this case) which matches the expression in which the replacement has
 to be made. If the pattern matches, the replacement will be done on
 the head symbol (\verb|\del| in this case). A pattern \verb|\del|
 without the argument wildcard \verb|#| would only replace
-when \verb|\del| occurs without any arguments (as in e.g.~\verb|\del +
-A|).
+when \verb|\del| occurs without any arguments (as in 
+e.g.~\verb|\del + A|).
 
 These settings have no effect in the command-line version.
 
