@@ -19,8 +19,13 @@
   <tbody>
     <tr>
       <td class="attrname">Status:</td>
-      <td class="attrval">unreleased</td>
+      <td class="attrval">released</td>
     </tr>
+    
+      <tr>
+        <td class="attrname">Release time:</td>
+        <td class="attrval">2008-12-11 16:25 GMT</td>
+      </tr>
     
     <tr>
       <td class="attrname">Completion:</td>
@@ -53,6 +58,18 @@
   <tbody>
 
     <tr class="even-row">
+    <td class="date">Thu Dec 11 16:25:57 UTC 2008</td>
+    <td class="person">Kasper Peeters &lt;kasper.peeters@...&gt;</td>
+    <td class="message">released</td>
+    </tr>
+    <tr><td colspan="3" class="logcomment">
+      
+        First officially stable release.
+      
+    </td></tr>
+    <tr><td></td></tr>
+
+    <tr class="odd-row">
     <td class="date">Fri Aug 29 11:41:30 UTC 2008</td>
     <td class="person">Kasper Peeters &lt;kasper.peeters@...&gt;</td>
     <td class="message">created</td>
