@@ -20,6 +20,21 @@
   
     <tr>
       <td>  </td>
+      <td class="littledate">2008-12-11</td>
+      <td class="issuename">
+        <a href="issue-67f410348cb3e122b6f7541db7fccddb3cc08e9e.html">Introduce a notation for 'a range of objects'</a>
+      </td>
+      
+        <td class="issuerelease">
+          
+          
+        </td>
+      
+      
+    </tr>
+  
+    <tr>
+      <td>  </td>
       <td class="littledate">2008-11-24</td>
       <td class="issuename">
         <a href="issue-248630fcbe40bd59f52429e99de2b43488b5e8b8.html">Nested \partial's do not always flatten automatically.</a>
